# mirage

./: .gitignore  README.md  pyproject.toml
configs/: local_mps.yaml  research.yaml  smoke.yaml
docs/: technical_note.md
mirage/: __init__.py  agent.py  cli.py  config.py  dashboard.py  envs.py  models.py  plotting.py  replay.py  runner.py  runtime.py  video.py
results/: README.md  plot_data.json
tests/: test_agent_checkpoint.py  test_cli.py  test_config.py  test_dashboard_controls.py  test_envs.py  test_models.py  test_replay.py  test_runner_smoke.py
