[project]
name = "mirage"
version = "0.1.0"
description = "Continual world-model rocket lander research lab in pure PyTorch."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Atila Vahedian" }]
dependencies = [
    "fastapi>=0.110",
    "gymnasium>=1.1",
    "imageio[ffmpeg]>=2.34",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "torch>=2.3",
    "tqdm>=4.66",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
box2d = ["gymnasium[box2d]>=1.1"]

[project.scripts]
mirage = "mirage.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mirage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
